@@ -1,4 +1,4 @@
-\ProvidesFileRCS $Header: /home/mojca/cron/mojca/github/cvs/pgf/pgf/generic/pgf/systemlayer/pgfsys-dvips.def,v 1.5 2005/09/21 00:05:35 tantau Exp $
+\ProvidesFileRCS $Header: /home/mojca/cron/mojca/github/cvs/pgf/pgf/generic/pgf/systemlayer/pgfsys-dvips.def,v 1.6 2005/09/21 21:16:50 tantau Exp $
 
 % Copyright 2005 by Till Tantau <tantau@cs.tu-berlin.de>.
 %
@@ -21,19 +21,6 @@
 %
 \def\pgfsys@invoke#1{\special{ps:: #1}}
 \def\pgfsys@outerinvoke#1{\special{ps: #1}}
-
-\newif\ifpgf@sys@dvips@warning@given
-\def\pgf@sys@dvips@warning{%
-  \ifpgf@sys@dvips@warning@given%
-  \else%
-    \global\pgf@sys@dvips@warning@giventrue%
-    \PackageWarning{pgf}{You are trying to use transparency with
-      PostScript which is, most unfortunately, not possible. All your 
-      transparency specifications will, sadly, be ignored. I am sorry}%
-  \fi%
-}
-\def\pgfsys@fill@opacity#1{\pgf@sys@dvips@warning}
-\def\pgfsys@stroke@opacity#1{\pgf@sys@dvips@warning}
 
 \def\pgfsys@beginpicture{\special{ps: }\special{ps::[begin]}\pgfsys@invoke{pgfo}}
 \def\pgfsys@endpicture{\pgfsys@invoke{pgfc}\special{ps::[end]}}
@@ -144,6 +131,9 @@
   \special{!
     /pgfsc{}B% stroke color is empty by default
     /pgffc{}B% fill color is empty by default
+    /pgfstr{stroke}B%
+    /pgffill{fill}B%
+    /pgfeofill{eofill}B%
     /pgfl{clip newpath}B% clipping
     /pgfe{a dup 0 rlineto exch 0 exch rlineto neg 0 rlineto closepath}B% rectangle
     /pgfw{setlinewidth}B% setlinewidth
